//apps/api/libs/proto/src/proto/users.proto
syntax = "proto3";

package api.users;

import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

// Role enum
enum UserRole {
    STAFF = 0;
    ADMIN = 1;
}

// Common messages for Users
message User {
    string id = 1;
    string email = 2;
    optional string username = 3;
    optional string password = 4;
    optional string refreshToken = 5;
    UserRole role = 6;
    google.protobuf.Timestamp createdAt = 7;
    google.protobuf.Timestamp updatedAt = 8;
}

message CreateUserDto {
    string email = 1;
    string password = 2;
    optional string username = 3;
    optional UserRole role = 4; // Optional, defaults to STAFF
}

message TokenPayload {
    string userId = 1;
    string email = 2;
    UserRole role = 3;
}

message Profile {
    string id = 1;
    string userId = 2;
    string bio = 3;
    string location = 4;
    string website = 5;
    google.protobuf.Timestamp createdAt = 6;
    google.protobuf.Timestamp updatedAt = 7;
}

message CreateProfileDto {
    string userId = 1;
    string bio = 2;
    string location = 3;
    string website = 4;
}

// Users specific messages
service UsersService {
    rpc GetUsers (Empty) returns (GetUsersResponse);
    rpc GetCurrentUser (GetCurrentUserRequest) returns (GetCurrentUserResponse);
    rpc CreateProfile (CreateProfileDto) returns (Profile);
    rpc CreateUser (CreateUserDto) returns (User);
    rpc GetOrCreateUser (CreateUserDto) returns (User);
    rpc GetUserByEmail (GetUserByEmailRequest) returns (User);
    rpc UpdateUser (UpdateUserRequest) returns (User);

    // Credentials
    rpc GetUserCredentials (GetCredentialsRequest) returns (GetCredentialsResponse);
    rpc CreateCredential (CreateCredentialRequest) returns (Credential);
    rpc DeleteCredential (DeleteCredentialRequest) returns (Credential);
    rpc RevealCredential (RevealCredentialRequest) returns (RevealedCredential);
}

message Empty {}

message GetUsersResponse {
    repeated User users = 1;
}

message GetCurrentUserRequest {
    User user = 1;
}

message GetCurrentUserResponse {
    string id = 1;
    optional string username = 2;
    string email = 3;
    optional string avatar = 4;
    UserRole role = 5;
}

message GetUserByEmailRequest {
    string email = 1;
}

message UpdateUserRequest {
    TokenPayload query = 1;
    ReceivedRefreshToken data = 2;
}

message ReceivedRefreshToken {
    string refreshToken = 1;
}

message Credential {
    string id = 1;
    string name = 2;
    string userId = 3;
    google.protobuf.Timestamp createdAt = 4;
    google.protobuf.Timestamp updatedAt = 5;
}

message CreateCredentialDto {
    string name = 1;
    string value = 2;
}

message GetCredentialsRequest {
    User user = 1;
}

message GetCredentialsResponse {
    repeated Credential credentials = 1;
}

message CreateCredentialRequest {
    User user = 1;
    CreateCredentialDto credential = 2;
}

message DeleteCredentialRequest {
    User user = 1;
    string id = 2;
}

message RevealedCredential {
    string id = 1;
    string name = 2;
    string value = 3;
    string userId = 4;
    google.protobuf.Timestamp createdAt = 5;
    google.protobuf.Timestamp updatedAt = 6;
}

message RevealCredentialRequest {
    User user = 1;
    string id = 2;
}
